--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,11 +36,11 @@
     "layout/archive",
     "layout/sidebar",
     "layout/json_cv",
-    "layout/publications",
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
-    "vendor/font-awesome/brands"
+    "vendor/font-awesome/brands"，
+    "layout/publications"
 ;
 
 html {
