--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,7 +39,7 @@
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
-    "vendor/font-awesome/brands"，
+    "vendor/font-awesome/brands",
     "layout/publications"
 ;
 
